--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,15 @@ android {
 
 dependencies {
 
-    // This Project Uses Firebase Machine Learning to Detect and
-    // Extract Text From Images
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
+    // Add these below dependencies to use firebase mlkit
     implementation 'com.google.firebase:firebase-core:20.0.2'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
